--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
+  },
+  "optionalDependencies": {
+    "win-node-env": "^0.4.0"
   }
 }
